[project]
name = "projectondes"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ghastrod", email = "clement.jallat@gmail.com" }
]
dependencies = [
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "matplotlib>=3.9.3",
    "pyqt6>=6.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"projectondes" = "projectondes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/projectondes"]
